--- a/day 2 working/resources/css/style.css
+++ b/day 2 working/resources/css/style.css
@@ -25,6 +25,39 @@ header {
   height: 100vh;
 }
 
+.logo {
+  height: 100px;
+  width: auto;
+  float: left;
+  margin-top: 20px;
+}
+
+.main-nav {
+  float: right;
+  list-style-type: none;
+  margin-top: 55px;
+}
+
+.main-nav li {
+  display: inline-block;
+  margin-left: 40px;
+}
+
+.main-nav li a:link,
+.main-nav li a:visited {
+  color: #FFF;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: inherit;
+  border-bottom: 2px solid transparent;
+  transition: border-bottom .2s;
+}
+
+.main-nav li a:hover,
+.main-nav li a:active {
+  border-bottom: 2px solid #E67E22;
+}
+
 .hero-text-box {
   position: absolute;
   width: 1140px;
@@ -33,13 +66,19 @@ header {
   transform: translate(-50%, -50%);
 }
 
+h1,
+h2,
+h3 {
+  font-weight: 300;
+  text-transform: uppercase;
+}
+
 h1 {
   margin: 0;
   margin-bottom: 20px;
   color: #FFF;
-  font-size: 200%; //same as 2rem
-  font-weight: 300;
-  text-transform: uppercase;
+  font-size: 240%; /* same as 2rem */
+  word-spacing: 4px;
   letter-spacing: 1px;
 }
 
@@ -50,6 +89,8 @@ h1 {
   font-weight: 300;
   text-decoration: none;
   border-radius: 200px;
+
+  transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
 .btn-full:link,
@@ -57,17 +98,13 @@ h1 {
   background-color: #E67E22;
   border: 1px solid #E67E22;
   color: #FFF;
+  margin-right: 15px;
 }
 
 .btn-ghost:link,
 .btn-ghost:visited {
   border: 1px solid #E67E22;
   color: #E67E22;
-}
-
-.btn:hover,
-.btn:active {
-  background-color: #CF6D17;
 }
 
 .btn:hover,
@@ -84,4 +121,53 @@ h1 {
 .btn-ghost:active {
   background-color: #CF6D17;
   color: #FFF;
+}
+
+section {
+  padding: 80px 0;
+}
+
+h2 {
+  font-size: 180%;
+  word-spacing: 2px;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: 1px;
+}
+
+h2:after {
+  display: block;
+  height: 2px;
+  background-color: #E67E22;
+  content: " ";
+  width: 100px;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+
+.long-copy {
+  line-height: 145%;
+  width: 70%;
+  margin-left: 15%;
+}
+
+.box {
+  padding: 1%;
+}
+
+.icon-big {
+  font-size: 350%;
+  display: block;
+  color: #E67E22;
+  margin-bottom: 10px;
+}
+
+h3 {
+  font-size: 110%;
+  margin-bottom: 15px;
+}
+
+.box p {
+  font-size: 90%;
+  line-height: 145%;
 }
